unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/breadwinner_ns__BW_Inventory_Location__c.object-meta.xml
<CustomObject>
    <label>NetSuite Inventory Location</label>
    <nameField>
        <label>Inventory Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Inventory Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>