unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__DefaultReturnCost__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DefaultReturnCost__c</fullName>
    <label>Default Return Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>