unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__InvtCountInterval__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__InvtCountInterval__c</fullName>
    <label>Count Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>