unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Item</label>
    <referenceTo>breadwinner_ns__BW_Item__c</referenceTo>
    <relationshipLabel>NetSuite Inventory Locations</relationshipLabel>
    <relationshipName>BWInventoryLocations</relationshipName>
    <type>Lookup</type>
</CustomField>