unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__Location__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NetSuite Location</label>
    <referenceTo>breadwinner_ns__BW_Location__c</referenceTo>
    <relationshipName>BWInventoryLocations</relationshipName>
    <type>Lookup</type>
</CustomField>