unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__NextInvtCountDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NextInvtCountDate__c</fullName>
    <label>Next Count Date</label>
    <type>DateTime</type>
</CustomField>