unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__PeriodicLotSizeDays__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PeriodicLotSizeDays__c</fullName>
    <label>Periods of Supply Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>