unpackaged/main/default/objects/breadwinner_ns__BW_Inventory_Location__c/fields/breadwinner_ns__PeriodicLotSizeType__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PeriodicLotSizeType__c</fullName>
    <label>Periods of Supply Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>